syntax = "proto3";

package api.file;

option go_package = "pkg/grpc";

message FileChunk {
  string filename = 1;
  bytes data = 2;
}
